testsuite/bsc.typechecker/kind/ClassDefParamConflictingUses.bs.bsc-out.expected
checking package dependencies
compiling ClassDefParamConflictingUses.bs
Error: "ClassDefParamConflictingUses.bs", line 7, column 13: (T0027)
  The numeric type `b' was found where a value type was expected.
